compiler/tests/fixtures/invalid/semantics/initiator_min_not_1.viv
// Invalid: initiator role with min != 1

action bad-init-min:
    roles:
        @actor:
            as: initiator
            n: 0-1
